grammar.ebnf
(* NL is the end of a line. The lexer delivers tokens grouped by line, so line ends are not tokens; blank lines are skipped. *)
(* A simple statement is one line; an if is several: the condition line, the "{" line, every line of the block, the "}" line. *)
(* Terminals: "i32" "i64" "bool" "mut" "exit" "true" "false" "if" "else" "while" are keyword tokens, "{" is lbrace, "}" is rbrace, *)
(* ":=" "+" "-" "*" "==" "!=" "!" are operator tokens, ident and number are ident and number tokens. *)
(* Precedence, tightest first: factor (including "!"), term (*), arith (+ -), expr (== !=, at most one per expression). *)

program   ::= { statement } exit
statement ::= decl | assign | if | while
decl      ::= type [ "mut" ] ident "{" expr "}"
type      ::= "i32" | "i64" | "bool"
assign    ::= ident ":=" expr
if        ::= "if" expr NL block [ "else" NL block ]
while     ::= "while" expr NL block
block     ::= "{" NL { statement } [ exit NL ] "}" NL          (* not empty *)
exit      ::= "exit" factor
expr      ::= arith [ ( "==" | "!=" ) arith ]
arith     ::= term { ( "+" | "-" ) term }
term      ::= factor { "*" factor }
factor    ::= number | "true" | "false" | ident | "!" factor
